@@ -1,3 +1,9 @@
+/*
+ * Modified for use with MPlayer, for details see the CVS changelog at
+ * http://www.mplayerhq.hu/cgi-bin/cvsweb.cgi/main/
+ * $Id$
+ */
+
 /* 
 // This is an optimized DCT from Jeff Tsay's maplay 1.2+ package.
 // Saved one multiplication by doing the 'twiddle factor' stuff
