@@ -1,4 +1,10 @@
 /*
+ * Modified for use with MPlayer, for details see the CVS changelog at
+ * http://www.mplayerhq.hu/cgi-bin/cvsweb.cgi/main/
+ * $Id$
+ */
+
+/*
 * mpg123_synth_1to1 works the same way as the c version of this
 * file.  only two types of changes have been made:
 * - reordered floating point instructions to
@@ -23,8 +29,8 @@
 *
 * $Id$
 */
-#include "../config.h"
-#include "../mangle.h"
+#include "config.h"
+#include "mangle.h"
 #define real float /* ugly - but only way */
 
 static long attribute_used buffs[1088]={0};
@@ -76,7 +82,7 @@ int synth_1to1_pent(real *bandPtr, int channel, short *samples)
 "        leal (%%ecx,%%ebp,4),%%eax\n\t"
 ".L74:\n\t"
 "        pushl %%eax\n\t"
-"        call "MANGLE(dct64)"\n\t"
+"        call "MANGLE(mp3lib_dct64)"\n\t"
 "        addl $12,%%esp\n\t"
 "        movl %4,%%edx\n\t"
 "        leal 0(,%%edx,4),%%edx\n\t"
